--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+.fondo {
+  position: relative;          /* Ya no es fixed */
+  width: 100%;
+  height: 400px;               /* Ajustá según el alto que quieras */
+  background-image: url('img/fondo1.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;    /* O cover si querés que recorte para llenar */
+  background-position: center;
+  margin: 0 auto;
+}
+
+
 body {
   font-family: 'Playfair Display', serif;
   background-color: #f4f6f8;
